hphp/test/quick/IncDecProp.php.expectf
Test begin
--- C ---
int(1)
int(-1)
int(0)
int(0)
Error: Implicit null to int conversion for pre/post inc/dec
Error: Implicit null to int conversion for pre/post inc/dec
object(C) (8) {
  ["preInc"]=>
  int(1)
  ["preDec"]=>
  int(-1)
  ["postInc"]=>
  int(1)
  ["postDec"]=>
  int(-1)
  ["p"]=>
  NULL
  ["q"]=>
  NULL
  ["r"]=>
  NULL
  ["s"]=>
  NULL
}
--- null ---
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object
Error: Setting a property on a non-object
NULL
--- 42 ---

Warning: Attempt to increment/decrement property of non-object in %s/quick/IncDecProp.php on line 45
NULL
42
Test end